deploy: abf5ae806b433034ec85277eeed2feffa58ee386

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
 
                 <div class="home-article-content markdown-body">
                     
-                        回顾财务知识对于很多非财务背景的同学看似很陌生，其实必要的财务知识对于我们日常的生活和工作都有着息息相关的帮助。本人曾参加多次参加线上和线下财务和金融知识方面的培训，可惜疏于总结和应用，直到最近开始规划产品的商业化落地损益表计算才又捡起来。本文将总结...
+                        回顾财务知识对于很多非财务背景的同学看似很陌生，其实必要的财务知识对于我们日常的生活和工作都有着息息相关的帮助。本人曾参加多次参加线上和线下财务和金融知识方面的培训，可惜疏于总结和应用，直到最近开始规划产品的商业化落地才又捡起来。本文将总结自己曾经学...
                     
                 </div>
 
